--- a/.github/workflows/jd_redPacket.yaml
+++ b/.github/workflows/jd_redPacket.yaml
@@ -1,12 +1,9 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: 全民抢红包
 
 on:
     workflow_dispatch:
     schedule:
-        - cron: "5 17 * * *"
+        - cron: "5 1,9,17 * * *"
     watch:
         types: [started]
         
@@ -24,7 +21,7 @@ jobs:
             - name: npm install
               run: |
                   npm install
-            - name: "运行【京东全民开红包】"
+            - name: "运行【京东全民抢红包】"
               run: |
                   node onlyOneExecute.js
               env:
