--- a/.github/workflows/jd_redPacket.yaml
+++ b/.github/workflows/jd_redPacket.yaml
@@ -1,4 +1,4 @@
-name: 全民抢红包
+name: 全民开红包
 
 on:
     workflow_dispatch:
@@ -21,7 +21,7 @@ jobs:
             - name: npm install
               run: |
                   npm install
-            - name: "运行【京东全民抢红包】"
+            - name: "运行【京东全民开红包】"
               run: |
                   node onlyOneExecute.js
               env:
