--- a/.github/workflows/youth_read.yml
+++ b/.github/workflows/youth_read.yml
@@ -29,7 +29,7 @@ jobs:
       - name: '运行 【中青看点自动阅读一】'
         if: env.YOUTH_READ
         run: |
-          node node onlyOneExecute.js
+          node onlyOneExecute.js
         env:
           YOUTH_READ: ${{ secrets.YOUTH_READ }}
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
@@ -38,7 +38,7 @@ jobs:
       - name: '运行 【中青看点自动阅读二】'
         if: env.YOUTH_READ2
         run: |
-          node node onlyOneExecute.js
+          node onlyOneExecute.js
         env:
           YOUTH_READ: ${{ secrets.YOUTH_READ2 }}
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
@@ -47,7 +47,7 @@ jobs:
       - name: '运行 【中青看点自动阅读三】'
         if: env.YOUTH_READ3
         run: |
-          node node onlyOneExecute.js
+          node onlyOneExecute.js
         env:
           YOUTH_READ: ${{ secrets.YOUTH_READ3 }}
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
@@ -56,7 +56,7 @@ jobs:
       - name: '运行 【中青看点自动阅读四】'
         if: env.YOUTH_READ4
         run: |
-          node node onlyOneExecute.js
+          node onlyOneExecute.js
         env:
           YOUTH_READ: ${{ secrets.YOUTH_READ4 }}
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
