--- a/.github/workflows/youth_read.yml
+++ b/.github/workflows/youth_read.yml
@@ -28,35 +28,27 @@ jobs:
       - name: '运行 【中青看点自动阅读一】'
         if: env.YOUTH_READ
         run: |
-          node onlyOneExecute.js
+          node https://raw.githubusercontent.com/Sunert/Scripts/master/Task/Youth_Read.js
         env:
           YOUTH_READ: ${{ secrets.YOUTH_READ }}
-          JD_COOKIE: ${{ secrets.JD_COOKIE }}
-          SYNCURL: https://raw.githubusercontent.com/Sunert/Scripts/master/Task/Youth_Read.js
 
       - name: '运行 【中青看点自动阅读二】'
         if: env.YOUTH_READ2
         run: |
-          node onlyOneExecute.js
+          node https://raw.githubusercontent.com/Sunert/Scripts/master/Task/Youth_Read.js
         env:
-          YOUTH_READ: ${{ secrets.YOUTH_READ }}
-          JD_COOKIE: ${{ secrets.JD_COOKIE }}
-          SYNCURL: https://raw.githubusercontent.com/Sunert/Scripts/master/Task/Youth_Read.js
+          YOUTH_READ: ${{ secrets.YOUTH_READ2 }}
           
       - name: '运行 【中青看点自动阅读三】'
         if: env.YOUTH_READ3
         run: |
-          node onlyOneExecute.js
+          node https://raw.githubusercontent.com/Sunert/Scripts/master/Task/Youth_Read.js
         env:
-          YOUTH_READ: ${{ secrets.YOUTH_READ }}
-          JD_COOKIE: ${{ secrets.JD_COOKIE }}
-          SYNCURL: https://raw.githubusercontent.com/Sunert/Scripts/master/Task/Youth_Read.js
+          YOUTH_READ: ${{ secrets.YOUTH_READ3 }}
           
       - name: '运行 【中青看点自动阅读四】'
         if: env.YOUTH_READ4
         run: |
-          node onlyOneExecute.js
+          node https://raw.githubusercontent.com/Sunert/Scripts/master/Task/Youth_Read.js
         env:
-          YOUTH_READ: ${{ secrets.YOUTH_READ }}
-          JD_COOKIE: ${{ secrets.JD_COOKIE }}
-          SYNCURL: https://raw.githubusercontent.com/Sunert/Scripts/master/Task/Youth_Read.js
+          YOUTH_READ: ${{ secrets.YOUTH_READ4 }}
