--- a/.github/workflows/xmly_speed.yaml
+++ b/.github/workflows/xmly_speed.yaml
@@ -27,4 +27,4 @@ jobs:
               env:
                   XMLY_SPEED_COOKIE: ${{ secrets.XMLY_SPEED_COOKIE }}
                   XMLY_ANDROID_AGENT: ${{ secrets.XMLY_ANDROID_AGENT }}
-                  SYNCURL: https://github.com/Zero-S1/xmly_speed/raw/master/xmly_speed.py
+                  SYNCURL: https://raw.githubusercontent.com/Zero-S1/xmly_speed/master/xmly_speed.py
