--- a/.github/workflows/jd_ms_redrain.yaml
+++ b/.github/workflows/jd_ms_redrain.yaml
@@ -1,9 +1,9 @@
-name: 京喜财富岛
+name: 秒杀红包雨
 
 on:
     workflow_dispatch:
     schedule:
-        - cron: '30 15 * * *'
+        - cron: '30 23 * * *'
     watch:
         types: [started]
         
@@ -21,7 +21,7 @@ jobs:
             - name: npm install
               run: |
                   npm install
-            - name: "运行【京喜财富岛】"
+            - name: "运行【秒杀红包雨】"
               run: |
                   node onlyOneExecute.js
               env:
@@ -33,4 +33,4 @@ jobs:
                   TG_USER_ID: ${{ secrets.TG_USER_ID }}
                   DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
                   DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
-                  SYNCURL: https://raw.githubusercontent.com/MoPoQAQ/Script/main/Me/jx_cfd.js
+                  SYNCURL: https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_ms_redrain.js
